# minillm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.dev  LICENSE  README.md  chat_transformer.py  config.yaml  debug_generation.py  docker-compose.dev.yml  docker-compose.yml  finetune_llama.py  fixed_generation_test.py  gemini.md  minimal_test.py  pyproject.toml  requirements.txt  run_transformer_token.py  suggestions.md  test_direct_generation.py  test_direct_original.py  test_original.py  test_request.json  test_server.py  train_transformer.py  transformer_model_llama.py  transformer_model_llama_june2025.py  transformer_model_llama_june2025_checkpointing.py
.claude/: settings.local.json
.github/workflows/: ci.yml
minillm/: __init__.py  cli.py  config.py  generation.py  layers.py  model_loader.py  models.py  optimization.py  server.py  tokenizer.py  utils.py
scripts/: dev-setup.sh  docker-dev.sh
web/static/: index.html
